# ResumeAI-Agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: api.md  baseline_model.md  data_source.md  llm_analysis.md  model_comparison.md
src/resumeai_agent/: __init__.py
src/resumeai_agent/api/: __init__.py  main.py  schemas.py
src/resumeai_agent/data/: __init__.py  prepare_dataset.py
src/resumeai_agent/models/: __init__.py  train_baseline.py  train_sentence_transformer.py
src/resumeai_agent/services/: __init__.py  matching.py  reporting.py
tests/: test_api.py  test_prepare_dataset.py  test_reporting.py  test_train_baseline.py  test_train_sentence_transformer.py
